--- a/styles/visual.css
+++ b/styles/visual.css
@@ -72,6 +72,29 @@ footer {
 .icon:hover {
     transform: scale(1.2);
 }
+.swiper-button-prev,
+.swiper-button-next {
+    background-color: var(--color-white);
+    color: var(--color-black) !important;
+    width: fit-content;
+    height: fit-content;
+    border-radius: 4px;
+}
+.swiper-button-prev:focus,
+.swiper-button-next:focus {
+    background-color: var(--color-black-mixin);
+    color: var(--color-white) !important;
+}
+.sliderColumnCard {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+}
+.sliderRowCard {
+    display: flex;
+    justify-content: center;
+}
 .tech_darkButton {
     background-color: var(--color-black-mixin);
     color: var(--color-white);
@@ -204,6 +227,19 @@ header #menuContent .searchForm input {
 }
 .fourthSlideTextBlock {
     color: var(--color-black-mixin);
+}
+.galleryTextBlock {
+    background-color: var(--color-black-mixin);
+    color: var(--color-white);
+    border: 1px var(--color-white) solid;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    position: absolute;
+    z-index: 3;
+    left: 50%;
 }
 hr {
     background-color: var(--color-grey);
