changed quality of images; changed min to phone number input.

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -913,7 +913,7 @@
       }
     }
     .start {
-      background-image: url("../images/min/startbackmobile_min.jpg");
+      background-image: url("../images/startbackmobile.jpg");
       background-position: top left;
       background-size: contain;
       max-height: 727px;
